--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,16 @@ services:
       POSTGRES_DB: nest
     networks:
       - mynetwork
+  test-db:
+    image: postgres
+    restart: always
+    ports:
+      - 5434:5432
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: nest
+    networks:
+      - mynetwork
 networks:
   mynetwork:
