--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "db:test:rm": "sudo docker rm -f -v  rest-tutorial-test-db-1",
     "db:test:up": "sudo docker compose up test-db -d",
     "db:test:restart": "yarn db:test:rm && yarn db:test:up && sleep 4 && yarn prisma:test:deploy",
+    "prisma:dev:studio": "npx prisma studio",
+    "prisma:test:studio": "npx dotenv -e .env.test -- prisma studio",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
